# c4-seguridad

./: Entrega1.html  README.md  prueba.ipynb  pyproject.toml  style.css
Entrega1-botones/: Entrega1.html
Proyecto_esteganografia/: .gitignore  README.md  chistes_entrada.csv  main.py  proteger_csv.py  pyproject.toml
Proyecto_esteganografia/modelos/: latest_generator.pth
Proyecto_esteganografia/runs/gan_barcos_v1/: events.out.tfevents.1775637964.DESKTOP-4GTF07L.17397.0  events.out.tfevents.1775638189.DESKTOP-4GTF07L.18469.0
Proyecto_esteganografia/runs/gan_barcos_v2/: events.out.tfevents.1775647355.DESKTOP-4GTF07L.50289.0
Proyecto_esteganografia/runs/gan_steganography_v1/: events.out.tfevents.1775573407.DESKTOP-4GTF07L.19121.0  events.out.tfevents.1775574281.DESKTOP-4GTF07L.24858.0  events.out.tfevents.1775574344.DESKTOP-4GTF07L.25169.0  events.out.tfevents.1775574389.DESKTOP-4GTF07L.25353.0  events.out.tfevents.1775574427.DESKTOP-4GTF07L.25526.0
Proyecto_esteganografia/src/: extraer.py  main.py  ocultar.py  procesador_masivo.py  proteger_csv.py  run.py  test_aes+esteg.py  utils.py
Proyecto_esteganografia/src/cripto/: aes.py
Proyecto_esteganografia/src/esteganografia/: lsb.py
Proyecto_esteganografia/src/gan/: Discriminator.py  DiscriminatorV2.py  Generator.py  GeneratorV2.py  discriminator.py  discriminator_main.py  entrenamiento.py  entrenamiento_v2.py  generador_de_imagenes.py  generador_de_imagenesV2.py  generator.py  generator_main.py  train.py
Proyecto_esteganografia/src/gan2/: Discriminator.py  Generator.py  generator_main.py
(+6 files in other folders)
