[project]
name = "proyecto-esteganografia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.7",
    "datasets>=4.7.0",
    "huggingface-hub>=1.6.0",
    "matplotlib>=3.10.8",
    "tensorboard>=2.20.0",
    "torchvision>=0.26.0",
]
